adding data mocks to fill dynamoDB tables, configuring handlers to use aws-sdk to get info from dynamoDB tables

--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "homepage": "https://github.com/LorepRocks/serverless-backend#readme",
   "devDependencies": {
     "serverless-auto-swagger": "^2.9.2"
+  },
+  "dependencies": {
+    "aws-sdk": "^2.1231.0"
   }
 }
