--- a/product-service/serverless.yml
+++ b/product-service/serverless.yml
@@ -49,6 +49,21 @@ functions:
               description: "Product Id provided not found"
             }
           }
+  createProduct:
+    handler: handler.createProduct
+    events:
+      - httpApi:
+          path: /products
+          method: post
+          responseData: {
+            200: {
+              description: "Product item created",
+              bodyType: 'Product'
+            },
+            500: {
+              description: "Error creating product"
+            }
+          }
 
 resources:
   Resources:
