updating errors, re-structuring code, and making some improvements

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "serverless-auto-swagger": "^2.9.2"
   },
   "dependencies": {
-    "aws-sdk": "^2.1231.0"
+    "aws-sdk": "^2.1231.0",
+    "nanoid": "^4.0.0"
   }
 }
