fixing cors error

--- a/product-service/serverless.yml
+++ b/product-service/serverless.yml
@@ -15,8 +15,9 @@ custom: {
 provider:
   name: aws
   runtime: nodejs14.x
-
   stage: dev
+  httpApi:
+    cors: true
 
 functions:
   getProductList:
