--- a/import-service/package.json
+++ b/import-service/package.json
@@ -12,6 +12,7 @@
     "@aws-sdk/client-s3": "^3.198.0",
     "@aws-sdk/s3-request-presigner": "^3.198.0",
     "aws-sdk": "^2.1242.0",
+    "csv": "^6.2.1",
     "node-fetch": "^3.2.10",
     "serverless-deployment-bucket": "^1.6.0"
   }
