--- a/product-service/package.json
+++ b/product-service/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.202.0",
+    "@aws-sdk/client-sns": "^3.204.0",
     "aws-sdk": "^2.1235.0",
     "nanoid": "^4.0.0"
   }
