--- a/product-service/package.json
+++ b/product-service/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.202.0",
     "@aws-sdk/client-sns": "^3.204.0",
+    "@aws-sdk/util-dynamodb": "^3.208.0",
     "aws-sdk": "^2.1235.0",
     "nanoid": "^4.0.0"
   }
